feat: add on-tour tournament endpoint
