# src/routes/tournamentsRouter.ts
@@ -1,5 +1,10 @@
 import { Router } from 'express';
-import { fetchOfficial, getTournaments, scrapeMetrix } from '../scrapers/tournamentsScraper';
+import {
+  fetchOfficial,
+  getPlayersOnTour,
+  getTournaments,
+  scrapeMetrix,
+} from '../scrapers/tournamentsScraper';
 import {
   handleTournamentRoute,
   handleTournamentRouteJsonError,
@@ -22,5 +27,7 @@ router.get('/', async (req, res, next) =>
 router.get('/metrix', async (req, res, next) =>
   getTournaments('metrix', scrapeMetrix)(req, res, next),
 );
+
+router.get('/on-tour', async (req, res, next) => getPlayersOnTour()(req, res, next));
 
 export default router;
